tests/baselines/reference/defaultValueInFunctionTypes.errors.txt
==== tests/cases/compiler/defaultValueInFunctionTypes.ts (2 errors) ====
    var x: (a: number = 1) => number;
            ~~~~~~~~~~~~~
!!! defaultValueInFunctionTypes.ts(1,9): error TS2174: Default arguments are only allowed in implementation.
    var y = <(a : string = "") => any>(undefined)
              ~~~~~~~~~~~~~~~
!!! defaultValueInFunctionTypes.ts(2,11): error TS2174: Default arguments are only allowed in implementation.